# obsidian-vault-backup

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/run-local/: SKILL.md
.github/workflows/: build.yml
scripts/: backup.sh  dev_ui.py  entrypoint.sh  health-server.sh  watcher.sh
skills/onboard/: SKILL.md
src/vault_backup/: backup.py  config.py  health.py  notify.py  restore.py  ui.py  watcher.py
tests/: conftest.py  test_backup.py  test_config.py  test_health.py  test_notify.py  test_restore.py  test_ui.py  test_watcher.py
