[project]
name = "vault-backup"
version = "1.0.0"
description = "Obsidian vault backup sidecar with git versioning and cloud storage"
requires-python = ">=3.12"
dependencies = [
    "python-json-logger>=4.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
vault-backup = "vault_backup.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
